css/styles.css
/* Color Palette
Englisch lavender: rgb(185, 146, 159);
terra-cotta (rosa): rgb(237, 106, 90);
white: rgb(255, 253, 253);
grape: rgba(38, 17, 50, 0.5);
dark gray: rgba(136,136,136); #888
--------
/* font-families
"Open Sans", sans-serif
"Lato", sans-serif
*/

/* Global styles
---------------------------------*/

/* The Box Model Fix*/
html {
  box-sizing: border-box;
  scroll-behavior: smooth;
}

*,
*:before,
*after {
  box-sizing: inherit;
}

.full-screen {
  min-height: 100vh;
}

.container-text {
  max-width: 1100px;
  /* Make room for the icons bar on the right and the same space on
   * the left. */
  width: calc(90% - 64px);
  /* placed the text in the middle */
  margin: 0 auto;
  padding: 50px 0;
}

body {
  min-width: 280px;
  color: black;
  /* removes extra default space right and left */
  margin: 0;
  padding: 0;
  font-family: "Open Sans", sans-serif;
  font-size: 15px;
  line-height: 1.5;
}
h1,
h2 {
  font-family: "Lato", sans-serif;
  text-align: left;
}

h1 {
  font-size: 4.6em;
  margin-block-start: 0;
  padding-top: 5vh;
  line-height: 1;
  margin-bottom: 0.3em;
}

h2 {
  font-size: 2.6em;
  font-weight: 400;
  line-height: 1;
  margin-bottom: 1em;
}

h3 {
  margin-bottom: 0;
}

i {
  font-size: 23px;
}

button {
  padding: 8px 18px;
  font-size: 14px;
  color: rgba(38, 17, 50);
  border-radius: 3px;
  text-align: center;
}

/* --------scrollbar------------ */
/* width */
::-webkit-scrollbar {
  width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
  background: #f1f1f1;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #888;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: rgb(237, 106, 90);
  /* background: #555; */
}
/* --------end scrollbar------------ */

/*-------------dropdwon-------------*/
.dropdown {
  position: fixed;
  right: 4%;
  top: 5%;
}

.dropbtn {
  cursor: pointer;
  background: rgb(255, 253, 253);
  border: 1px solid;
  padding: 4px;
  position: absolute;
  right: 0%;
}

.dropbtn:hover {
  border-color: rgba(237, 106, 90);
  border: 1px solid rgba(237, 106, 90);
}

.dropdown-content {
  margin-top: 32px;
  display: none;
  z-index: 10;
  background-color: rgb(255, 253, 253);
  border: 0.5px solid rgb(185, 146, 159);
}

.dropdown-content a {
  color: black;
  background-color: rgb(255, 253, 253);
  padding: 12px 16px;
  text-decoration: none;
  display: block;
  margin: 2px;
}

.dropdown a:hover {
  background-color: rgba(237, 106, 90, 0.5);
  /* offset-x | offset-y | blur-radius | spread-radius | color */
  box-shadow: 0 0 0 2px rgba(237, 106, 90);
}

.dropdown:hover .dropdown-content {
  display: block;
}

/*-------------end dropdwon-------------*/

/* ----vertical bar with links ---- */
.icons {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  position: fixed;
  width: 24px;
  right: 5%;
  bottom: 26%;
  text-align: center;
  z-index: 8;
}

.icons div {
  margin-top: 4px;
}

.icons a {
  color: black;
}

.icons a:hover {
  /* the underline of the link is removed*/
  text-decoration: none;
  color: rgba(237, 106, 90);
}
.vertical {
  width: 6px;
  margin: 0 9px;
  background-color: black;
  border-radius: 3px;
  height: 20%;
  position: fixed;
  bottom: 5%;
  right: 5%;
}
/* ----end vertical bar ---- */

/* INTRODUCTION SECTION
---------------------------------*/
.intro {
  background: rgb(185, 146, 159, 0.4);
}

/* creates ellipsis and styles them*/
.dot-dot-dot span {
  width: 0.2em;
  height: 0.2em;
  margin: 0 0.2em;
  background-color: black;
  border-radius: 50%;
  display: inline-block;
  animation: jumping-dots 1.4s 5;
  /*linear --> same speed from the beginning to the end */
  animation-timing-function: linear;
}

/* second dot */
.dot-dot-dot span:nth-child(2) {
  animation-delay: 0.4s;
}
/* third dot */
.dot-dot-dot span:nth-child(3) {
  animation-delay: 0.8s;
}

/*animation of the ellipsis*/
@keyframes jumping-dots {
  40% {
    transform: translateY(0em);
  }
  50% {
    transform: translateY(-0.5em);
  }
}

/* skill and tools list*/
.list-wrapper {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
}
.list {
  margin: 0 1em;
}
.list ol {
  padding: 0;
}

.list li {
  list-style-type: none;
  font-size: 150%;
}

/*down-arrow button*/
.down-arrow {
  position: absolute;
  bottom: 20px;
  left: 50%;
  margin-left: -35px;
}

.down-arrow:hover {
  animation: indicate 1.4s infinite;
  animation-timing-function: ease-out;
}

/* animation of the down arrow button */
@keyframes indicate {
  10% {
    transform: translateY(0.8em);
  }
  100% {
    transform: translateY(0em);
  }
}

/* PROJECTS SECTIONS
---------------------------------*/

.projects {
  background: rgb(255, 253, 253);
  display: inline-grid;
  /* minimum width of the card is 300px
    when 2 of the card won't fit, then 1fr has 
    been declared as max width */

  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));

  /* grid-auto-rows: 400px; */

  /* includes gap between rows and columns */
  grid-gap: 1rem;
}
/* grid-template-columns: repeat(3, 1fr); */
.project-item {
  border: 1px solid #eee;
  /* offset-x | offset-y | blur-radius | color */
  box-shadow: 0 2px 3px #ccc;
  margin: 10px 0;
  padding: 20px;
  border-radius: 3px;
  position: relative;
}

.project-image {
  overflow: hidden;
  text-align: center;
}
.projects img {
  height: 170px;
}

/*camara container */
.animated-camara {
  position: absolute;
  right: 15px;
}
.project-text {
  margin-bottom: 30px;
}
.project-item h3 {
  margin-top: 0;
}
.project-item form {
  display: inline-block;
}
.project-buttons {
  position: absolute;
  bottom: 10px;
}

.projects button {
  background: rgb(255, 253, 253);
  border: 1px solid rgb(185, 146, 159);
}

.projects button:hover {
  border-width: 2px;
  border-color: rgba(237, 106, 90);
}

/* camara animation and design */
.camara {
  color: rgb(185, 146, 159);
}
.camara:hover {
  color: rgba(237, 106, 90);
}
.animated-camara:hover {
  display: inline-block;
  animation: vibrate 1.4s infinite;
  animation-timing-function: linear;
}

/* animation of the camara icon */
@keyframes vibrate {
  25% {
    transform: rotateZ(20deg);
  }

  75% {
    transform: rotateZ(-20deg);
  }
}
/* end of camara animation and design */

/* pop up styles */
.video-pop-up {
  display: none;
  /*fixed: is position relative to the viewport
  it stays in the same place even if the page is 
  scrolled */
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  z-index: 10;
}

.close-btn {
  /*absolute: position relative to the nearest 
  positioned ancestor*/
  position: absolute;
  top: 10px;
  right: 10px;
  padding: 1px 5px;
  font-size: 1.25rem;
}

#overlay {
  display: none;
  position: fixed;
  /*opacity: 0;*/
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(38, 17, 50, 0.5);
}
/* end pop up styles */

/* ALL EDUCATION AND WORK
---------------------------------*/
.education-and-work {
  height: 500px;
  background-color: rgba(237, 106, 90, 0.3);
}

/* Tab ---------------------------------*/

.tab-container {
  padding-bottom: 0;
  border-color: rgba(237, 106, 90);
}

.tab-bar {
  border-color: rgba(237, 106, 90);
  border-bottom-style: solid;
  border-width: 2px;
  padding: 0 10px;
  z-index: 2;
}

.tab-button {
  border: solid;
  /* top color | left-right color | bottom color */
  border-color: white white rgba(237, 106, 90);
  border-width: 1px 1px 2px 1px;
  margin-bottom: -2px;
}

.tab-button:hover {
  border-top-color: rgba(237, 106, 90);
  border-right-color: rgba(237, 106, 90);
  border-left-color: rgba(237, 106, 90);
}

/* when the button is active */
.focus {
  /* focus has a default outline */
  outline: none;
  border-color: rgba(237, 106, 90) rgba(237, 106, 90) white;
  background-color: white;
  border-width: 2px 2px 2px 2px;
  margin-bottom: -2px;
}

/* Tab Content--------------------------------*/

.all-tab-content {
  position: relative;
  height: 80%;
}

.all-tab-content p {
  width: 60%;
  margin: 0 15px;
}

.tab-content {
  background: white;
  border: 2px solid rgb(237, 106, 90);
  border-top: 0;
  position: relative;
  height: 70%;
  padding-top: 0;
  overflow: auto;
}

.tab-content h3,
.tab-content h2 {
  margin-inline-start: 5px;
}
/* + matches to the first paragraph that comes
after h3  */
.tab-content h3 + p {
  font-style: italic;
}

/* hides the titles for large screens */
.tab-content h2:first-child {
  display: none;
}

.tab-content h2 {
  color: rgb(237, 106, 90);
}

/* Footer
---------------------------------*/
footer {
  border: black;
  background-color: rgba(136, 136, 136, 0.9);
  color: white;
  text-align: center;
  padding: 20px 0;
}

/* Responsive
---------------------------------*/
@media screen and (min-width: 700px) {
  header {
    text-align: center;
  }
}

@media only screen and (min-width: 501px) and (max-width: 700px) {
  h1 {
    font-size: 50px;
  }
  h2 {
    font-size: 25px;
  }
}

@media screen and (max-width: 900px) {
  /* hides the text of the tab for smaller screens */
  .button-text {
    display: none;
  }
  /* displays title of the section in small screens */
  .tab-content h2:first-child {
    color: rgba(237, 106, 90);
    display: block;
  }
  iframe {
    width: 90vw;
    /* video with 16:9 aspect-ratio */
    height: calc(90vw / 16 * 9);
  }
}
@media screen and (max-width: 500px) {
  h1 {
    font-size: 40px;
  }
  h2 {
    font-size: 20px;
  }
  body {
    font-size: 13px;
  }
  h3 {
    font-size: 14px;
  }
}

/* change incons or buttons size in 
smaller screens als 376px */

@media screen and (max-width: 376px) {
  .education-and-work button {
    padding: 8px 10px;
  }
}

@media screen and (max-width: 298px) {
  .education-and-work button {
    padding: 8px 7px;
  }
}

